6 December 2017: Wouter
	- release 0.15 tag.
	- trunk has version 0.16.
	- Fix example.conf default printout text replacement.

11 October 2017: Wouter
	- Fix SSL_OP_NO_SSLv2 logic for setting the option.

10 October 2017: Wouter
	- release 0.14 tag
	- trunk has version 0.15.
	- annotate switch fallthrough for gcc 7.2.

2 October 2017: Wouter
	- Fix OSX install to exclude var and not set tar timestamps.
	- Fix compile warning on gcc 7.2.
	- Fix makedist.sh for openssl 1.1 and ldns 1.7.
	- Fix keygen.exe for openssl 1.1 API.

22 August 2017: Wouter
	- Fix no NSEC3 in nodata reply: kr.com always fails to validate, uses
	  uk.uk instead.
	- updated root servers list.

4 July 2017: Wouter
	- Allow strings longer than 2 characters for the HTTP probe.
	  Patch from Tomas Hozza.

6 January 2017: Wouter
	- For windows, include the libgcc_s_sjlj-1.dll and
	  libwinpthread-1.dll

15 December 2016: Wouter
	- 0.13 release tag.
	- trunk has 0.14.
	- Fix osx installer to detect 10.12 (Sierra) so that icon is
	  displayed correctly after reinstall.

28 November 2016: Wouter
	- Updated acx_nlnetlabs.m4 for openssl-1.1.0 compatibility.
	- Patch for openssl-1.1.0 compilation.

8 June 2016: Wouter
	- Tomas Hozza (3):
	  dnssec-trigger-script: Use ducktaping when restarting NM, instead of
	  checking the sysfs
	  dnssec-trigger-script: Silence the calls to chattr
	  Improved text in the panel GUI when insecure mode is forced

9 December 2015: Wouter
	- Remove kickstarts of daemons because daemon died for test user.

8 December 2015: Wouter
	- Fixup compile on OSX with static SSL for makedist mac build.
	- OSX hide unbound user from login screen.
	- Attempt to stop panels and kickstart daemons on OSX.

7 December 2015: Wouter
	- Remove stuff from osx installer that logs out the user.

4 December 2015: Wouter
	- Fixup osx gui panel start code for new osx.  installer talks about
	  new locations and set permissions on key files and add to the path